--- a/src/infranet_team1/templates/base.html
+++ b/src/infranet_team1/templates/base.html
@@ -9,15 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    
+    {# 이 부분이 가장 중요합니다: head 블록이 정의되어야 합니다. #}
+    {% block head %}
+    {# 하위 템플릿에서 super()를 호출하면 이곳에 있는 내용이 기본적으로 포함됩니다. #}
+    {# 현재 base.html에는 추가적인 head 내용이 없으므로 super()는 비어있습니다. #}
+    {# 하지만 이 블록 자체가 정의되어 있어야 UndefinedError가 발생하지 않습니다. #}
+    {% endblock %}
 </head>
 <body>
 
 <div class="main-sheet">
     
-    <!-- 1. 앱 헤더 -->
     <header class="app-header">
         
-        <!-- 왼쪽: 로고 -->
         <div class="header-section header-left">
             <a href="/" class="logo">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 12L4 4L12 4L12 12L4 12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 12L12 20H20V12H12Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M4 12L12 20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -25,7 +30,6 @@
             </a>
         </div>
 
-        <!-- 가운데: 메인 내비게이션 -->
         <nav class="header-section header-center">
             
             <div class="menu-item">
@@ -40,7 +44,7 @@
                 <a href="#">이슈 관리</a>
                 <div class="dropdown-menu">
                     <a href="{{ url_for('issue.home') }}">이슈 조회 및 관리</a>
-                    <a href="#">이슈 통계</a>
+                    <a href="{{ url_for('issue.get_status_statistics') }}">이슈 통계</a> {# 이 부분이 통계 페이지로 연결됩니다 #}
                 </div>
             </div>
 
@@ -74,7 +78,6 @@
             </div>
         </nav>
 
-        <!-- 오른쪽: 사용자 정보 및 액션 -->
         <div class="header-section header-right">
             {% if current_user.is_authenticated %}
                 <div class="user-box">
@@ -96,7 +99,6 @@
         </div>
     </header>
 
-    <!-- 2. 메인 콘텐츠가 삽입될 영역 -->
     <main class="content-body">
         {% block content %}{% endblock %}
     </main>
