--- a/src/infranet_team1/templates/issue/detail.html
+++ b/src/infranet_team1/templates/issue/detail.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이슈 상세 - {{ issue.title }}</title>
-</head>
-<body>
+{% extends "base.html" %}
 
+{% block title %}이슈 상세 - {{ issue.title }}{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>이슈 상세 정보</h1>
 
@@ -48,7 +44,7 @@
 
         <div class="button-group">
             {# 수정 링크 #}
-            <a href="{{ url_for('issue.edit', family_name=current_family, issue_id=issue.mongo_id) }}">수정</a>
+            <a href="{{ url_for('issue.edit_get', family_name=current_family, issue_id=issue.mongo_id) }}">수정</a>
             
             {# 삭제 폼 (POST 요청) - 기능적 목적을 위해 display:inline 유지 #}
             <form action="{{ url_for('issue.delete', family_name=current_family, issue_id=issue.mongo_id) }}" method="post" style="display:inline;" onsubmit="return confirm('이 게시글을 정말 삭제하시겠습니까?');">
@@ -60,5 +56,4 @@
         </div>
 
     </div>
-</body>
-</html>
+{% endblock %}
