--- a/src/infranet_team1/templates/base.html
+++ b/src/infranet_team1/templates/base.html
@@ -9,12 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    
-    {# 이 부분이 가장 중요합니다: head 블록이 정의되어야 합니다. #}
+
     {% block head %}
-    {# 하위 템플릿에서 super()를 호출하면 이곳에 있는 내용이 기본적으로 포함됩니다. #}
-    {# 현재 base.html에는 추가적인 head 내용이 없으므로 super()는 비어있습니다. #}
-    {# 하지만 이 블록 자체가 정의되어 있어야 UndefinedError가 발생하지 않습니다. #}
     {% endblock %}
 </head>
 <body>
@@ -44,7 +40,7 @@
                 <a href="#">이슈 관리</a>
                 <div class="dropdown-menu">
                     <a href="{{ url_for('issue.home') }}">이슈 조회 및 관리</a>
-                    <a href="{{ url_for('issue.get_status_statistics') }}">이슈 통계</a> {# 이 부분이 통계 페이지로 연결됩니다 #}
+                    <a href="{{ url_for('issue.stats') }}">이슈 통계</a>
                 </div>
             </div>
 
