--- a/src/infranet_team1/templates/write/index.html
+++ b/src/infranet_team1/templates/write/index.html
@@ -40,7 +40,21 @@
             {% for post in posts %}
             <li>
                 <a href="{{ url_for('write.detail', post_id=post._id) }}">{{ post.title }}</a>
-                <small>by {{ author_map[post.author_id] }} | {{ post.created_at.strftime('%Y-%m-%d %H:%M') }}</small>
+                <br>
+                <small>
+                    📂 카테고리:
+                    {% if post.category == "notice" %}
+                        공지
+                    {% elif post.category == "free" %}
+                        자유
+                    {% elif post.category == "qna" %}
+                        질의응답
+                    {% else %}
+                        기타
+                    {% endif %}
+                    | ✍️ {{ author_map[post.author_id] }}
+                    | 🕒 {{ post.created_at.strftime('%Y-%m-%d %H:%M') }}
+                </small>
             </li>
             {% endfor %}
         </ul>
