--- a/src/infranet_team1/templates/client/list.html
+++ b/src/infranet_team1/templates/client/list.html
@@ -29,7 +29,13 @@
   </thead>
   <tbody>
     {% for c in clients %}
-    <tr>
+    <tr
+      {% if c.contract.highlight == "expired" %}
+        style="background-color: #ffe6e6;"  <!-- 연한 빨강 -->
+      {% elif c.contract.highlight == "soon" %}
+        style="background-color: #fff3cd;"  <!-- 연한 노랑 -->
+      {% endif %}
+    >
       <td>{{ c._id }}</td>
       <td>{{ c.company_name }}</td>
       <td>{{ c.department }}</td>
